--- a/static/less/layout.less
+++ b/static/less/layout.less
@@ -137,6 +137,12 @@ html {
                                 }
                                 .content {
                                     margin-top: 10px;
+                                    * {
+                                        max-width: 300px;
+                                        * {
+                                            max-width: 300px;
+                                        }
+                                    }
                                 }
                             }
                         }
