--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,10 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}{% end %}</title>
-        <link media="screen" rel="stylesheet/less" href="/static/less/base.less" type="text/less" />
-        <link media="screen" rel="stylesheet/less" href="/static/less/lib.less" type="text/less" />
-        <link media="screen" rel="stylesheet/less" href="/static/less/layout.less" type="text/less" />
-        <script src="/static/js/less.js" type="text/javascript"></script>
+        <link media="all" rel="stylesheet" href="/static/css/layout.css" type="text/css" />
         <script src="/static/js/jquery.js" type="text/javascript"></script>
         <link href='http://fonts.googleapis.com/css?family=Economica|Ribeye+Marrow' rel='stylesheet' type='text/css'>
         {% block style %}{% end %}
