--- a/templates/feed_view.html
+++ b/templates/feed_view.html
@@ -16,5 +16,6 @@ View Feeds
     </ul>
     <input type="submit" value="Delete Checked" />
     <a href="/feed/add">add</a>
+    <a href="/feed/fetch">fetch</a>
 </form>
 {% end %}
