--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Login|Buglist|ZQ{% end %}
+{% block title %}Login{% end %}
 {% block section %}
 <form action="" method="post">
     {{ xsrf_form_html() }}
