--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}{% end %}</title>
-        <link media="all" rel="stylesheet" href="/static/css/layout.css" type="text/css" />
+        <link media="all" rel="stylesheet" href="{{ static_url("css/layout.css") }}" type="text/css" />
         <script src="/static/js/jquery.js" type="text/javascript"></script>
         <link href='http://fonts.googleapis.com/css?family=Economica|Ribeye+Marrow' rel='stylesheet' type='text/css'>
         {% block style %}{% end %}
@@ -22,6 +22,7 @@
         <footer id="footer">
         {% include "footer.html" %}
         </footer>
+        <script src="{{ static_url("js/func.js") }}" type="text/javascript"></script>
         {% block script %}{% end %}
     </body>
 </html>
