--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -422,7 +422,7 @@ html body #wrap section div.container .column article .content * * {
 html body #wrap section .single-article {
   max-width: 1000px;
   background-color: #eee;
-  padding: 20px 0 10px 30px;
+  padding: 20px 30px 10px 30px;
   border-radius: 3px;
   border: 1px solid #dadada;
   color: #696969;
