--- a/static/less/layout.less
+++ b/static/less/layout.less
@@ -146,7 +146,7 @@ html {
                     .single-article {
                         max-width: 1000px;
                         background-color: #eee;
-                        padding: 20px 0 10px 30px;
+                        padding: 20px 30px 10px 30px;
                         border-radius: 3px;
                         border: 1px solid #dadada;
                         color: #696969;
