--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@ Ziqiang Planet
 <ul>
     {% for f in feeds %}
     <li class="feed" id="feed-{{ f.id }}">
-    <a href="#{{f.id}}">{{ f.feed_name }}</a>
+    <a style="display:block;" href="#{{f.id}}">{{ f.feed_name }}</a>
     </li>
     {% end %}
 </ul>
