--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,521 +1,120 @@
-/* 
-	@名称: base
-	@功能: 重设浏览器默认样式
-*/
-/* 防止用户自定义背景颜色对网页的影响 */
-html {
-  color: #000;
-  background: #eee;
-}
-/* 内外边距通常让各个浏览器样式的表现位置不同 */
-body,
-div,
-dl,
-dt,
-dd,
-ul,
-ol,
-li,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-pre,
-code,
-form,
-fieldset,
-legend,
-input,
-textarea,
-p,
-blockquote,
-th,
-td,
-hr,
-button,
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  margin: 0;
-  padding: 0;
-}
-/* 重设 HTML5 标签, IE 需要在 js 中 createElement(TAG) */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-/* 要注意表单元素并不继承父级 font 的问题 */
-body,
-button,
-input,
-select,
-textarea {
-  font: 12px/1.5 tahoma, arial, "\5b8b\4f53";
-}
-/* 初始化表单  */
-form {
-  margin: 0;
-}
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-legend {
-  border: 0;
-  *margin-left: -7px;
-}
-button,
-input,
-select,
-textarea {
-  font-size: 100%;
-  margin: 0;
-  vertical-align: baseline;
-  *vertical-align: middle;
-}
-button,
-input {
-  line-height: normal;
-}
-button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  cursor: pointer;
-  -webkit-appearance: button;
-  *overflow: visible;
-}
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  padding: 0;
-}
-input[type="search"] {
-  -webkit-appearance: textfield;
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  box-sizing: content-box;
-}
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-textarea {
-  overflow: auto;
-  vertical-align: top;
-}
-input,
-select,
-textarea {
-  font-size: 100%;
-}
-/* 去掉各Table  cell 的边距并让其边重合 */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-/* IE bug fixed: th 不继承 text-align*/
-th {
-  text-align: inherit;
-}
-/* 去除默认边框 */
-fieldset,
-img {
-  border: 0;
-}
-/* ie6 7 8(q) bug 显示为行内表现 */
-iframe {
-  display: block;
-}
-/* 去掉 firefox 下此元素的边框 */
-abbr,
-acronym {
-  border: 0;
-  font-variant: normal;
-}
-/* 一致的 del 样式 */
-del {
-  text-decoration: line-through;
-}
-address,
-caption,
-cite,
-code,
-dfn,
-em,
-th,
-var {
-  font-style: normal;
-  font-weight: 500;
-}
-/* 去掉列表前的标识, li 会继承 */
-ol,
-ul {
-  list-style: none;
-}
-/* 对齐是排版最重要的因素, 别让什么都居中 */
-caption,
-th {
-  text-align: left;
-}
-/* 来自yahoo, 让标题都自定义, 适应多个系统应用 */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 100%;
-  font-weight: 500;
-}
-q:before,
-q:after {
-  content: '';
-}
-/* 统一上标和下标 */
-sup {
-  vertical-align: text-top;
-}
-sub {
-  vertical-align: text-bottom;
-}
-/* 让链接在 hover 状态下显示下划线 */
-a:hover {
-  text-decoration: underline;
-}
-/* 默认不显示下划线，保持页面简洁 */
-ins,
-a {
-  text-decoration: none;
-}
-/* 清理浮动 */
-.fn-clear:after {
-  visibility: hidden;
-  display: block;
-  font-size: 0;
-  content: " ";
-  clear: both;
-  height: 0;
-}
-.fn-clear {
-  zoom: 1;
-  /* for IE6 IE7 */
+html{color:#000;background:#eee;}
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,hr,button,article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{margin:0;padding:0;}
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block;}
+body,button,input,select,textarea{font:12px/1.5 tahoma,arial,"\5b8b\4f53";}
+form{margin:0;}
+fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em;}
+legend{border:0;*margin-left:-7px;}
+button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle;}
+button,input{line-height:normal;}
+button,input[type="button"],input[type="reset"],input[type="submit"]{cursor:pointer;-webkit-appearance:button;*overflow:visible;}
+input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0;}
+input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}
+input[type="search"]::-webkit-search-decoration{-webkit-appearance:none;}
+button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
+textarea{overflow:auto;vertical-align:top;}
+input,select,textarea{font-size:100%;}
+table{border-collapse:collapse;border-spacing:0;}
+th{text-align:inherit;}
+fieldset,img{border:0;}
+iframe{display:block;}
+abbr,acronym{border:0;font-variant:normal;}
+del{text-decoration:line-through;}
+address,caption,cite,code,dfn,em,th,var{font-style:normal;font-weight:500;}
+ol,ul{list-style:none;}
+caption,th{text-align:left;}
+h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:500;}
+q:before,q:after{content:'';}
+sup{vertical-align:text-top;}
+sub{vertical-align:text-bottom;}
+a:hover{text-decoration:underline;}
+ins,a{text-decoration:none;}
+.fn-clear:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0;}
+.fn-clear{zoom:1;}
+body .fn-hide{display:none;}
+.fn-left,.fn-right{display:inline;}
+.fn-left{float:left;}
+.fn-right{float:right;}
+.fn-center{margin:0 auto;}
+.ft-center{text-align:center;}
+.ft-left{text-align:left;}
+.ft-right{text-align:right;}
+::selection{background:#cc3300;color:#fff;text-shadow:none;}
+html{width:100%;}html body{text-align:center;}html body header{background-color:#252525;}html body header .header{text-align:left;margin:0 auto;height:30px;padding:15px;line-height:30px;}html body header .header .logo{font-family:'Economica',sans-serif;font-weight:bold;font-size:30px;}
+html body header .header span a{color:#ffd700;text-decoration:none;}
+html body header .header form{display:inline;float:right;}html body header .header form input[type='search']{height:20px;font-size:16px;vertical-align:baseline;width:200px;margin-right:50px;border:1px solid #dadada;background-color:rgba(238, 238, 238, 0.9);border-radius:6px;box-shadow:inset 0 1px 2px rgba(0, 0, 0, 0.12);outline:0 none;padding:5px 8px;color:#333;}html body header .header form input[type='search']:focus{background-color:rgba(255, 255, 255, 0.9);}
+html body #wrap{margin:30px auto 80px;}html body #wrap aside{width:150px;height:auto;background-color:#575D60;color:rgba(238, 255, 255, 0.8);border-radius:0 6px 6px 0;position:fixed;left:0;top:90px;padding:10px 0;}html body #wrap aside ul{width:120px;text-align:left;}html body #wrap aside ul li{border-radius:0 3px 3px 0;cursor:pointer;margin:3px 0;padding:3px 15px 3px 10px;}html body #wrap aside ul li:hover{background-color:rgba(238, 238, 238, 0.3);color:rgba(238, 238, 238, 0.8);}
+html body #wrap aside ul li a{color:#eee;text-decoration:none;}html body #wrap aside ul li a:hover{filter:alpha(opacity=80);opacity:0.8;}
+html body #wrap section{margin-left:150px;text-align:left;}html body #wrap section div.container{margin-left:30px;width:auto;margin-right:10px;display:inline-block;vertical-align:top;}html body #wrap section div.container article{max-width:1000px;background-color:white;border-radius:6px;margin-bottom:20px;padding:15px;text-shadow:1px 1px 1px #fff;color:black;}html body #wrap section div.container article h3 a{font-size:24px;color:#8b0000;}
+html body #wrap section div.container article .meta{margin:10px 0;color:#708090;border-bottom:1px solid #eee;}
+html body #wrap section div.container article .content h1{font-size:16px;font-weight:bold;}
+html body #wrap section div.container article .content p{margin-bottom:15px;}
+html body #wrap section div.container article .content a{color:#369;}html body #wrap section div.container article .content a:link,html body #wrap section div.container article .content a:visited,html body #wrap section div.container article .content a:hover,html body #wrap section div.container article .content a:active{color:#369;}
+html body #wrap section div.container article .content .code .highlight{border:1px dashed #ddd;padding:10px;text-shadow:none;}
+html body #wrap section div.container article .content * *{max-width:1000px;}
+html body #wrap section .single-article{max-width:1000px;background-color:#eee;padding:20px 30px 10px 30px;border-radius:3px;border:1px solid #dadada;color:#696969;text-align:left;}html body #wrap section .single-article a{color:#369;filter:alpha(opacity=80);opacity:0.9;text-decoration:none;}html body #wrap section .single-article a:hover{filter:alpha(opacity=80);opacity:1;}
+html body #wrap section .single-article .single-title{font-size:26px;}html body #wrap section .single-article .single-title a{color:#8b0000;}
+html body #wrap section .single-article .single-content{margin-top:15px;}html body #wrap section .single-article .single-content * *{max-width:900px;}
+html body #wrap section .single-article .single-content p{margin-top:8px;font-size:13px;}
+html body #wrap section .single-article .toolbar{border-radius:3px;margin-top:20px;max-width:900px;border-top:1px solid #dadada;padding-top:13px;}html body #wrap section .single-article .toolbar span{display:inline-block;}html body #wrap section .single-article .toolbar span a{display:inline-block;border-radius:3px;text-decoration:none;color:#d3d3d3;padding:3px 6px;font-size:12px;background:#f8f8ff;}html body #wrap section .single-article .toolbar span a:hover{color:#696969;}
+html body #footer{-webkit-transition:margin 0.4s ease-in-out;-moz-transition:margin 0.4s ease-in-out;-ms-transition:margin 0.4s ease-in-out;-o-transition:margin 0.4s ease-in-out;transition:margin 0.4s ease-in-out;position:fixed;bottom:0;left:0;width:100%;background:#fff;border-top:1px solid #dadada;clear:both;font-size:12px;font-family:'Ribeye Marrow',cursive;color:#777;padding:16px 0 10px;margin-bottom:-60px;text-align:center;}html body #footer .copyright{margin:0 auto;text-align:left;max-width:1000px;}html body #footer .copyright a{color:black;}html body #footer .copyright a:hover{color:#8b0000;}
+#footer.show{margin-bottom:0;}
+/*----- pygments theme -----*/
+.c, .cm, .c1 { color: #0e6081; font-style: italic } /* Comments */
+.err { color: #a61717; background-color: #e3d2d2 } /* Error */
+.k { font-weight: bold; color: blue; } /* Keyword */
+.o { font-weight: bold } /* Operator */
+.cp { color: #999; font-weight: bold } /* Comment.Preproc */
+.cs { color: #999; font-weight: bold; font-style: italic } /* Comment.Special */
+.gd { color: #000; background-color: #ffdddd } /* Generic.Deleted */
+.gd .x { color: #000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
+.ge { font-style: italic } /* Generic.Emph */
+.gr { color: #a00 } /* Generic.Error */
+.gh { color: #999 } /* Generic.Heading */
+.gi { color: #000; background-color: #ddffdd } /* Generic.Inserted */
+.gi .x { color: #000; background-color: #aaffaa } /* Generic.Inserted.Specific */
+.go { color: #888 } /* Generic.Output */
+.gp { color: #555 } /* Generic.Prompt */
+.gs { font-weight: bold } /* Generic.Strong */
+.gu { color: #aaaaaa } /* Generic.Subheading */
+.gt { color: #a00 } /* Generic.Traceback */
+.kc { font-weight: bold } /* Keyword.Constant */
+.kd { font-weight: bold } /* Keyword.Declaration */
+.kp { font-weight: bold } /* Keyword.Pseudo */
+.kr { font-weight: bold } /* Keyword.Reserved */
+.kt { color: #445588; font-weight: bold } /* Keyword.Type */
+.m { color: #099 } /* Literal.Number */
+.s { color: #d14 } /* Literal.String */
+.na { color: #008080 } /* Name.Attribute */
+.nb { color: #0086B3 } /* Name.Builtin */
+.nc { color: #445588; font-weight: bold } /* Name.Class */
+.no { color: #008080 } /* Name.Constant */
+.ni { color: #800080 } /* Name.Entity */
+.ne { color: #900; font-weight: bold } /* Name.Exception */
+.nx { color: #900; font-weight: bold } /* Name.Function */
+.nn { color: #555 } /* Name.Namespace */
+.nt { color: #000080 } /* Name.Tag */
+.nv { color: #008080 } /* Name.Variable */
+.ow { font-weight: bold } /* Operator.Word */
+.w { color: #bbb } /* Text.Whitespace */
+.mf { color: #099 } /* Literal.Number.Float */
+.mh { color: #099 } /* Literal.Number.Hex */
+.mi { color: #099 } /* Literal.Number.Integer */
+.mo { color: #099 } /* Literal.Number.Oct */
+.sb { color: #d14 } /* Literal.String.Backtick */
+.sc { color: #d14 } /* Literal.String.Char */
+.sd { color: #d14 } /* Literal.String.Doc */
+.s2 { color: #d14 } /* Literal.String.Double */
+.se { color: #d14 } /* Literal.String.Escape */
+.sh { color: #d14 } /* Literal.String.Heredoc */
+.si { color: #d14 } /* Literal.String.Interpol */
+.sx { color: #d14 } /* Literal.String.Other */
+.sr { color: #009926 } /* Literal.String.Regex */
+.s1 { color: #d14 } /* Literal.String.Single */
+.ss { color: #990073 } /* Literal.String.Symbol */
+.bp { color: #3f7700 } /* Name.Builtin.Pseudo */
+.vc { color: #008080 } /* Name.Variable.Class */
+.vg { color: #008080 } /* Name.Variable.Global */
+.vi { color: #008080 } /* Name.Variable.Instance */
+.il { color: #099 } /* Literal.Number.Integer.Long */
 
-}
-/* 隐藏, 通常用来与 JS 配合 */
-body .fn-hide {
-  display: none;
-}
-/* 设置内联, 减少浮动带来的bug */
-.fn-left,
-.fn-right {
-  display: inline;
-}
-.fn-left {
-  float: left;
-}
-.fn-right {
-  float: right;
-}
-.fn-center {
-  margin: 0 auto;
-}
-.ft-center {
-  text-align: center;
-}
-.ft-left {
-  text-align: left;
-}
-.ft-right {
-  text-align: right;
-}
-::selection {
-  background: #cc3300;
-  color: #fff;
-  text-shadow: none;
-}
-html {
-  width: 100%;
-  background-image: url(../images/background.png);
-}
-html body {
-  text-align: center;
-}
-html body header {
-  background-color: #252525;
-}
-html body header .header {
-  text-align: left;
-  margin: 0 auto;
-  height: 30px;
-  padding: 15px;
-  line-height: 30px;
-}
-html body header .header .logo {
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -ms-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  font-family: 'Economica', sans-serif;
-  font-weight: bold;
-  font-size: 30px;
-}
-html body header .header span a {
-  color: #ffd700;
-  text-decoration: none;
-}
-html body header .header form {
-  display: inline;
-  float: right;
-}
-html body header .header form input[type='search'] {
-  -webkit-transition: background 0.4s ease-in-out;
-  -moz-transition: background 0.4s ease-in-out;
-  -ms-transition: background 0.4s ease-in-out;
-  -o-transition: background 0.4s ease-in-out;
-  transition: background 0.4s ease-in-out;
-  height: 20px;
-  font-size: 16px;
-  vertical-align: baseline;
-  width: 200px;
-  margin-right: 50px;
-  border: 1px solid #dadada;
-  background-color: rgba(238, 238, 238, 0.9);
-  border-radius: 6px;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12);
-  outline: 0 none;
-  padding: 5px 8px;
-  color: #333;
-}
-html body header .header form input[type='search']:focus {
-  background-color: rgba(255, 255, 255, 0.9);
-}
-html body #wrap {
-  margin: 30px auto 80px;
-}
-html body #wrap aside {
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -ms-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  width: 150px;
-  background-color: #575D60;
-  color: rgba(238, 255, 255, 0.8);
-  border-radius: 0 6px 6px 0;
-  position: fixed;
-  left: 0;
-  top: 90px;
-  padding: 10px 0;
-}
-html body #wrap aside ul {
-  width: 120px;
-  text-align: left;
-}
-html body #wrap aside ul li {
-  border-radius: 0 3px 3px 0;
-  cursor: pointer;
-  margin: 3px 0;
-  padding: 3px 15px 3px 10px;
-}
-html body #wrap aside ul li:hover {
-  background-color: rgba(238, 238, 238, 0.3);
-  color: rgba(238, 238, 238, 0.8);
-}
-html body #wrap aside ul li a {
-  color: #eee;
-  text-decoration: none;
-}
-html body #wrap aside ul li a:hover {
-  filter: alpha(opacity=80);
-  opacity: 0.8;
-}
-html body #wrap aside .sidebar-toggle {
-  color: rgba(238, 238, 238, 0.8);
-  position: absolute;
-  right: 0;
-  top: 0;
-  display: block;
-  width: 20px;
-  height: 100%;
-  cursor: pointer;
-  font-size: 16px;
-}
-html body #wrap aside .sidebar-toggle:hover {
-  background: rgba(238, 238, 238, 0.3);
-  text-decoration: none;
-}
-html body #wrap aside .sidebar-toggle .table {
-  display: table;
-  height: 100%;
-  width: 20px;
-}
-html body #wrap aside .sidebar-toggle .table .cell {
-  display: table-cell;
-  vertical-align: middle;
-}
-html body #wrap section {
-  margin-left: 180px;
-  -webkit-transition: margin 0.4s ease-in-out;
-  -moz-transition: margin 0.4s ease-in-out;
-  -ms-transition: margin 0.4s ease-in-out;
-  -o-transition: margin 0.4s ease-in-out;
-  transition: margin 0.4s ease-in-out;
-}
-html body #wrap section div.container {
-  text-align: left;
-}
-html body #wrap section div.container .column {
-  width: 300;
-  margin-right: 10px;
-  display: inline-block;
-  vertical-align: top;
-  background-position: 0 -20px;
-}
-html body #wrap section div.container .column article {
-  width: 300px;
-  background-color: #eee;
-  border-radius: 6px;
-  margin-bottom: 20px;
-  padding: 5px;
-  color: #333631;
-  text-shadow: 1px 1px 1px #fff;
-}
-html body #wrap section div.container .column article h3 a {
-  font-size: 16px;
-  color: #8b0000;
-}
-html body #wrap section div.container .column article * a {
-  color: #333631;
-}
-html body #wrap section div.container .column article .meta {
-  color: #708090;
-}
-html body #wrap section div.container .column article .content * * {
-  max-width: 300px;
-}
-html body #wrap section .single-article {
-  max-width: 1000px;
-  background-color: #eee;
-  padding: 20px 30px 10px 30px;
-  border-radius: 3px;
-  border: 1px solid #dadada;
-  color: #696969;
-  text-align: left;
-}
-html body #wrap section .single-article a {
-  color: #369;
-  filter: alpha(opacity=80);
-  opacity: 0.9;
-  text-decoration: none;
-}
-html body #wrap section .single-article a:hover {
-  filter: alpha(opacity=80);
-  opacity: 1;
-}
-html body #wrap section .single-article .single-title {
-  font-size: 26px;
-}
-html body #wrap section .single-article .single-title a {
-  color: #8b0000;
-}
-html body #wrap section .single-article .single-content {
-  margin-top: 15px;
-}
-html body #wrap section .single-article .single-content * * {
-  max-width: 900px;
-}
-html body #wrap section .single-article .single-content p {
-  margin-top: 8px;
-  font-size: 13px;
-}
-html body #wrap section .single-article .toolbar {
-  border-radius: 3px;
-  margin-top: 20px;
-  max-width: 900px;
-  border-top: 1px solid #dadada;
-  padding-top: 13px;
-}
-html body #wrap section .single-article .toolbar span {
-  display: inline-block;
-}
-html body #wrap section .single-article .toolbar span a {
-  display: inline-block;
-  border-radius: 3px;
-  text-decoration: none;
-  color: #d3d3d3;
-  padding: 3px 6px;
-  font-size: 12px;
-  background: #f8f8ff;
-}
-html body #wrap section .single-article .toolbar span a:hover {
-  color: #696969;
-}
-html body #footer {
-  -webkit-transition: margin 0.4s ease-in-out;
-  -moz-transition: margin 0.4s ease-in-out;
-  -ms-transition: margin 0.4s ease-in-out;
-  -o-transition: margin 0.4s ease-in-out;
-  transition: margin 0.4s ease-in-out;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background: #fff;
-  border-top: 1px solid #dadada;
-  clear: both;
-  font-size: 12px;
-  font-family: 'Ribeye Marrow', cursive;
-  color: #777;
-  padding: 16px 0 10px;
-  margin-bottom: -60px;
-  text-align: center;
-}
-html body #footer .copyright {
-  margin: 0 auto;
-  text-align: left;
-  max-width: 1000px;
-}
-html body #footer .copyright a {
-  color: black;
-}
-html body #footer .copyright a:hover {
-  color: #8b0000;
-}
-.expanded #aside {
-  left: -130px;
-}
-.expanded .header .logo {
-  margin-left: 50px;
-}
-.expanded #section {
-  margin-left: 65px;
-}
-#footer.show {
-  margin-bottom: 0;
-}
