--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>{% block title %}{% end %}</title>
         <link media="all" rel="stylesheet" href="{{ static_url("css/layout.css") }}" type="text/css" />
+        <!--link media="screen" rel="stylesheet/less" href="{{ static_url("less/layout.less") }}" type="text/less" />
+        <script src="/static/js/less.js" type="text/javascript"></script-->
         <script src="/static/js/jquery.js" type="text/javascript"></script>
         <link href='http://fonts.googleapis.com/css?family=Economica|Ribeye+Marrow' rel='stylesheet' type='text/css'>
         {% block style %}{% end %}
