--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -40,81 +40,77 @@ body .fn-hide{display:none;}
 .ft-left{text-align:left;}
 .ft-right{text-align:right;}
 ::selection{background:#cc3300;color:#fff;text-shadow:none;}
+.c,.cm,.c1{color:#0e6081;font-style:italic;}
+.err{color:#a61717;background-color:#e3d2d2;}
+.k{font-weight:bold;color:blue;}
+.o{font-weight:bold;}
+.cp{color:#999;font-weight:bold;}
+.cs{color:#999;font-weight:bold;font-style:italic;}
+.gd{color:#000;background-color:#ffdddd;}
+.gd .x{color:#000;background-color:#ffaaaa;}
+.ge{font-style:italic;}
+.gr{color:#aa0000;}
+.gh{color:#999999;}
+.gi{color:#000;background-color:#ddffdd;}
+.gi .x{color:#000;background-color:#aaffaa;}
+.go{color:#888888;}
+.gp{color:#555555;}
+.gs{font-weight:bold;}
+.gu{color:#aaaaaa;}
+.gt{color:#aa0000;}
+.kc{font-weight:bold;}
+.kd{font-weight:bold;}
+.kp{font-weight:bold;}
+.kr{font-weight:bold;}
+.kt{color:#445588;font-weight:bold;}
+.m{color:#009999;}
+.s{color:#dd1144;}
+.na{color:#008080;}
+.nb{color:#0086b3;}
+.nc{color:#445588;font-weight:bold;}
+.no{color:#008080;}
+.ni{color:#800080;}
+.ne{color:#900;font-weight:bold;}
+.nx{color:#900;font-weight:bold;}
+.nn{color:#555555;}
+.nt{color:#000080;}
+.nv{color:#008080;}
+.ow{font-weight:bold;}
+.w{color:#bbbbbb;}
+.mf{color:#009999;}
+.mh{color:#009999;}
+.mi{color:#009999;}
+.mo{color:#009999;}
+.sb{color:#dd1144;}
+.sc{color:#dd1144;}
+.sd{color:#dd1144;}
+.s2{color:#dd1144;}
+.se{color:#dd1144;}
+.sh{color:#dd1144;}
+.si{color:#dd1144;}
+.sx{color:#dd1144;}
+.sr{color:#009926;}
+.s1{color:#dd1144;}
+.ss{color:#990073;}
+.bp{color:#3f7700;}
+.vc{color:#008080;}
+.vg{color:#008080;}
+.vi{color:#008080;}
+.il{color:#009999;}
 html{width:100%;}html body{text-align:center;}html body header{background-color:#252525;}html body header .header{text-align:left;margin:0 auto;height:30px;padding:15px;line-height:30px;}html body header .header .logo{font-family:'Economica',sans-serif;font-weight:bold;font-size:30px;}
 html body header .header span a{color:#ffd700;text-decoration:none;}
 html body header .header form{display:inline;float:right;}html body header .header form input[type='search']{height:20px;font-size:16px;vertical-align:baseline;width:200px;margin-right:50px;border:1px solid #dadada;background-color:rgba(238, 238, 238, 0.9);border-radius:6px;box-shadow:inset 0 1px 2px rgba(0, 0, 0, 0.12);outline:0 none;padding:5px 8px;color:#333;}html body header .header form input[type='search']:focus{background-color:rgba(255, 255, 255, 0.9);}
 html body #wrap{margin:30px auto 80px;}html body #wrap aside{width:150px;height:auto;background-color:#575D60;color:rgba(238, 255, 255, 0.8);border-radius:0 6px 6px 0;position:fixed;left:0;top:90px;padding:10px 0;}html body #wrap aside ul{width:120px;text-align:left;}html body #wrap aside ul li{border-radius:0 3px 3px 0;cursor:pointer;margin:3px 0;padding:3px 15px 3px 10px;}html body #wrap aside ul li:hover{background-color:rgba(238, 238, 238, 0.3);color:rgba(238, 238, 238, 0.8);}
 html body #wrap aside ul li a{color:#eee;text-decoration:none;}html body #wrap aside ul li a:hover{filter:alpha(opacity=80);opacity:0.8;}
-html body #wrap section{margin-left:150px;text-align:left;}html body #wrap section div.container{margin-left:30px;width:auto;margin-right:10px;display:inline-block;vertical-align:top;}html body #wrap section div.container article{max-width:1000px;background-color:white;border-radius:6px;margin-bottom:20px;padding:15px;text-shadow:1px 1px 1px #fff;color:black;}html body #wrap section div.container article h3 a{font-size:24px;color:#8b0000;}
-html body #wrap section div.container article .meta{margin:10px 0;color:#708090;border-bottom:1px solid #eee;}
+html body #wrap section{margin-left:150px;text-align:left;}html body #wrap section div.container{margin-left:30px;max-width:900px;margin-right:10px;display:inline-block;vertical-align:top;}html body #wrap section div.container article{max-width:800px;background-color:white;border-radius:6px;margin-bottom:20px;padding:15px;text-shadow:1px 1px 1px #fff;color:black;}html body #wrap section div.container article h3 a{font-size:24px;color:#8b0000;}
+html body #wrap section div.container article .meta{margin:10px 0;color:#c0c0c0;border-bottom:1px solid #eee;}
 html body #wrap section div.container article .content h1{font-size:16px;font-weight:bold;}
 html body #wrap section div.container article .content p{margin-bottom:15px;}
 html body #wrap section div.container article .content a{color:#369;}html body #wrap section div.container article .content a:link,html body #wrap section div.container article .content a:visited,html body #wrap section div.container article .content a:hover,html body #wrap section div.container article .content a:active{color:#369;}
-html body #wrap section div.container article .content .code .highlight{border:1px dashed #ddd;padding:10px;text-shadow:none;}
-html body #wrap section div.container article .content * *{max-width:1000px;}
-html body #wrap section .single-article{max-width:1000px;background-color:#eee;padding:20px 30px 10px 30px;border-radius:3px;border:1px solid #dadada;color:#696969;text-align:left;}html body #wrap section .single-article a{color:#369;filter:alpha(opacity=80);opacity:0.9;text-decoration:none;}html body #wrap section .single-article a:hover{filter:alpha(opacity=80);opacity:1;}
-html body #wrap section .single-article .single-title{font-size:26px;}html body #wrap section .single-article .single-title a{color:#8b0000;}
-html body #wrap section .single-article .single-content{margin-top:15px;}html body #wrap section .single-article .single-content * *{max-width:900px;}
-html body #wrap section .single-article .single-content p{margin-top:8px;font-size:13px;}
-html body #wrap section .single-article .toolbar{border-radius:3px;margin-top:20px;max-width:900px;border-top:1px solid #dadada;padding-top:13px;}html body #wrap section .single-article .toolbar span{display:inline-block;}html body #wrap section .single-article .toolbar span a{display:inline-block;border-radius:3px;text-decoration:none;color:#d3d3d3;padding:3px 6px;font-size:12px;background:#f8f8ff;}html body #wrap section .single-article .toolbar span a:hover{color:#696969;}
+html body #wrap section div.container article .content .code .highlight{border:1px dashed #ddd;padding:10px;}
+html body #wrap section div.container article .content * *{max-width:9000px;}
+html body #wrap section .elevator-container{-webkit-transition:margin 0.4s ease-in-out;-moz-transition:margin 0.4s ease-in-out;-ms-transition:margin 0.4s ease-in-out;-o-transition:margin 0.4s ease-in-out;transition:margin 0.4s ease-in-out;position:fixed;max-height:200px;overflow:auto;right:0;bottom:0;background-color:white;border-radius:5px 0 0 5px;padding:10px 0;}html body #wrap section .elevator-container .elevator li{padding:0px 10px;font-size:14px;}html body #wrap section .elevator-container .elevator li a{color:#c0c0c0;}
+html body #wrap section .elevator-container .elevator li.ele-current{background-color:rgba(220, 220, 220, 0.8);}html body #wrap section .elevator-container .elevator li.ele-current a{color:#8b0000;}
 html body #footer{-webkit-transition:margin 0.4s ease-in-out;-moz-transition:margin 0.4s ease-in-out;-ms-transition:margin 0.4s ease-in-out;-o-transition:margin 0.4s ease-in-out;transition:margin 0.4s ease-in-out;position:fixed;bottom:0;left:0;width:100%;background:#fff;border-top:1px solid #dadada;clear:both;font-size:12px;font-family:'Ribeye Marrow',cursive;color:#777;padding:16px 0 10px;margin-bottom:-60px;text-align:center;}html body #footer .copyright{margin:0 auto;text-align:left;max-width:1000px;}html body #footer .copyright a{color:black;}html body #footer .copyright a:hover{color:#8b0000;}
 #footer.show{margin-bottom:0;}
-/*----- pygments theme -----*/
-.c, .cm, .c1 { color: #0e6081; font-style: italic } /* Comments */
-.err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.k { font-weight: bold; color: blue; } /* Keyword */
-.o { font-weight: bold } /* Operator */
-.cp { color: #999; font-weight: bold } /* Comment.Preproc */
-.cs { color: #999; font-weight: bold; font-style: italic } /* Comment.Special */
-.gd { color: #000; background-color: #ffdddd } /* Generic.Deleted */
-.gd .x { color: #000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
-.ge { font-style: italic } /* Generic.Emph */
-.gr { color: #a00 } /* Generic.Error */
-.gh { color: #999 } /* Generic.Heading */
-.gi { color: #000; background-color: #ddffdd } /* Generic.Inserted */
-.gi .x { color: #000; background-color: #aaffaa } /* Generic.Inserted.Specific */
-.go { color: #888 } /* Generic.Output */
-.gp { color: #555 } /* Generic.Prompt */
-.gs { font-weight: bold } /* Generic.Strong */
-.gu { color: #aaaaaa } /* Generic.Subheading */
-.gt { color: #a00 } /* Generic.Traceback */
-.kc { font-weight: bold } /* Keyword.Constant */
-.kd { font-weight: bold } /* Keyword.Declaration */
-.kp { font-weight: bold } /* Keyword.Pseudo */
-.kr { font-weight: bold } /* Keyword.Reserved */
-.kt { color: #445588; font-weight: bold } /* Keyword.Type */
-.m { color: #099 } /* Literal.Number */
-.s { color: #d14 } /* Literal.String */
-.na { color: #008080 } /* Name.Attribute */
-.nb { color: #0086B3 } /* Name.Builtin */
-.nc { color: #445588; font-weight: bold } /* Name.Class */
-.no { color: #008080 } /* Name.Constant */
-.ni { color: #800080 } /* Name.Entity */
-.ne { color: #900; font-weight: bold } /* Name.Exception */
-.nx { color: #900; font-weight: bold } /* Name.Function */
-.nn { color: #555 } /* Name.Namespace */
-.nt { color: #000080 } /* Name.Tag */
-.nv { color: #008080 } /* Name.Variable */
-.ow { font-weight: bold } /* Operator.Word */
-.w { color: #bbb } /* Text.Whitespace */
-.mf { color: #099 } /* Literal.Number.Float */
-.mh { color: #099 } /* Literal.Number.Hex */
-.mi { color: #099 } /* Literal.Number.Integer */
-.mo { color: #099 } /* Literal.Number.Oct */
-.sb { color: #d14 } /* Literal.String.Backtick */
-.sc { color: #d14 } /* Literal.String.Char */
-.sd { color: #d14 } /* Literal.String.Doc */
-.s2 { color: #d14 } /* Literal.String.Double */
-.se { color: #d14 } /* Literal.String.Escape */
-.sh { color: #d14 } /* Literal.String.Heredoc */
-.si { color: #d14 } /* Literal.String.Interpol */
-.sx { color: #d14 } /* Literal.String.Other */
-.sr { color: #009926 } /* Literal.String.Regex */
-.s1 { color: #d14 } /* Literal.String.Single */
-.ss { color: #990073 } /* Literal.String.Symbol */
-.bp { color: #3f7700 } /* Name.Builtin.Pseudo */
-.vc { color: #008080 } /* Name.Variable.Class */
-.vg { color: #008080 } /* Name.Variable.Global */
-.vi { color: #008080 } /* Name.Variable.Instance */
-.il { color: #099 } /* Literal.Number.Integer.Long */
-
+.elevator-container.show{margin-bottom:60px;}
