--- a/static/less/layout.less
+++ b/static/less/layout.less
@@ -26,6 +26,7 @@ html {
                 }
                 form {
                     .fn-right;
+                    margin-top: -35px;
                     input[type='search']{
                         height: 20px;
                         font-size: 16px;
@@ -139,6 +140,7 @@ html {
                         .transition(margin 0.4s ease-in-out);
                         position: fixed;
                         max-height: 200px;
+                        max-width: 284px;
                         overflow: auto;
                         right: 0;
                         bottom: 0;
